# Optibuilding

./: README.md  main.py  main_physics.py  optibuilding.db  pyproject.toml  start.bat
api/: auth.py  database.py  dependencies.py  main.py  models.py  schemas.py
api/data/: epw_catalog.py
api/routers/: analysis.py  auth.py  calibration.py  materials.py  projects.py  renovation.py  weather.py
api/services/: epw_cache.py
examples/output/: analyse_energetique.json  scenarios_renovation.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: actions-catalog.js  actions-panel.js  api.js  auth.js  buildings.js  calibration.js  charts.js  combo-analysis.js  main.js  pdf-export.js  ppt-export.js  projects.js  results.js  scenario-compare.js  style.css  weather-picker.js  zones.js
optibuilding/: __init__.py  engine.py  models.py  report.py
optibuilding/data/: references.py
thermal_engine/: README.md  __init__.py
thermal_engine/climate/: __init__.py  epw_models.py  epw_parser.py  sky_model.py  solar.py
thermal_engine/comfort/: __init__.py  comfort_indicators.py  operative_temp.py  pmv_ppd.py
thermal_engine/core/: __init__.py  building.py  envelope.py  materials.py  zone.py
thermal_engine/data/: material_db.py
thermal_engine/hvac/: __init__.py  base.py  boilers.py  dhw.py  district.py  heat_pumps.py  multi_service.py
thermal_engine/inter_zone/: __init__.py  adjacency.py  coupled_solver.py
thermal_engine/io/: geojson_loader.py
thermal_engine/renewables/: __init__.py  pv.py  solar_thermal.py
thermal_engine/results/: reports.py
thermal_engine/schedules/: gains.py  setpoints.py
thermal_engine/simulation/: needs.py  renovation.py
(+16 files in other folders)
