[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "optibuilding"
version = "2.0.0"
description = "Moteur de calcul énergétique des bâtiments — physique thermique + scénarios de rénovation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["optibuilding*", "optibuilding_physics*"]
