[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optibuilding"
version = "2.0.0"
description = "Outil d'analyse et de rénovation énergétique des bâtiments"
requires-python = ">=3.11"
dependencies = [
    "thermal-engine>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["optibuilding*"]
