[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optibuilding"
version = "2.0.0"
description = "Outil d'analyse et de rénovation énergétique des bâtiments"
requires-python = ">=3.11"
dependencies = [
    "thermal-engine>=0.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["optibuilding*"]
